--- a/backend/.env.example
+++ b/backend/.env.example
@@ -52,9 +52,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-DO_SPACES_KEY=DO00DWZXRPFNCC87FJDV
-DO_SPACES_SECRET=53FXcbNVYvIoX2cwcRP6W/tnn7K9mRXx4pF8wfQR8j8
-DO_SPACES_ENDPOINT=https://sgp1.digitaloceanspaces.com
-DO_SPACES_BUCKET=lucyspace
-DO_SPACES_REGION=sgp1
-DO_SPACES_URL=https://lucyspace.sgp1.digitaloceanspaces.com
+DO_SPACES_KEY=
+DO_SPACES_SECRET=
+DO_SPACES_ENDPOINT=
+DO_SPACES_BUCKET=
+DO_SPACES_REGION=
+DO_SPACES_URL=
